# Client-server_in_c_ipc_so

./: .gitignore  CMakeLists.txt  Informe.md  Makefile
config/: ipc.conf
include/: cJSON_custom.h  checksum.h  compress_and_decompress_file.h  variables_entorno.h
sources/: cJSON_custom.c  checksum.c  cliente_A.c  cliente_B.c  cliente_C.c  compress_and_decompress_file.c  servidor.c  variables_entorno.c
tests/: test_cliente_A.sh  test_cliente_B.sh  test_cliente_C.sh  test_multiples_clientes.sh
